changed path of pictures

--- a/src/app/about-me-section/about-me-section.component.html
+++ b/src/app/about-me-section/about-me-section.component.html
@@ -1,7 +1,7 @@
 <div class="about-me-container">
 
     <div class="about-me-header">
-        <img src="../../assets/img/Profilbild.jpeg" alt="">
+        <img src="assets/img/Profilbild.jpeg" alt="">
         <div class="about-me-text">
             <h1>About Me</h1>
             <p>"I absolutely love building web applications and solving problems. I'm always open for opportunities in order to expand my horizon."</p>
@@ -14,7 +14,7 @@
 
         <div data-aos="zoom-in" class="cv-boxes">
             <div class="icon-container">
-                <img src="../../assets/icons/walk-line.png" alt="">
+                <img src="assets/icons/walk-line.png" alt="">
             </div>
             <div class="text-container">
                 <p class="headline">My Journey began</p>
@@ -27,7 +27,7 @@
 
         <div data-aos="zoom-in" class="cv-boxes">
             <div class="icon-container">
-                <img src="../../assets/icons/heart-line.png" alt="">
+                <img src="assets/icons/heart-line.png" alt="">
             </div>
             <div class="text-container">
                 <p class="headline">My Journey began</p>
@@ -40,7 +40,7 @@
 
         <div data-aos="zoom-in" class="cv-boxes">
             <div class="icon-container">
-                <img src="../../assets/icons/search-line.png" alt="">
+                <img src="assets/icons/search-line.png" alt="">
             </div>
             <div class="text-container">
                 <p class="headline">My Journey began</p>
@@ -53,7 +53,7 @@
 
         <div data-aos="zoom-in" class="cv-boxes">
             <div class="icon-container">
-                <img src="../../assets/icons/flight-takeoff-line.png" alt="">
+                <img src="assets/icons/flight-takeoff-line.png" alt="">
             </div>
             <div class="text-container">
                 <p class="headline">My Journey began</p>
