--- a/src/app/home-section/home-section.component.html
+++ b/src/app/home-section/home-section.component.html
@@ -12,12 +12,12 @@
         </div>
     
         <div class="profile-picture-container">
-            <img data-aos="fade-left" class="profile-picture" src="../../assets/img/Profilbild.jpeg" alt="">
+            <img data-aos="fade-left" class="profile-picture" src="assets/img/Profilbild.jpeg" alt="">
         </div>
     </div>
 
     <div  data-aos="fade-down" class="down-icon-container">
-        <a href="#skills-section-container"><img class="down-icon" src="../../assets/icons/down-icon.png" alt=""></a>
+        <a href="#skills-section-container"><img class="down-icon" src="assets/icons/down-icon.png" alt=""></a>
     </div>
 
 </div>
