--- a/src/app/portfolio-section/portfolio-section.component.html
+++ b/src/app/portfolio-section/portfolio-section.component.html
@@ -15,7 +15,7 @@
         <div class="projects-boxes-container">
 
             <div data-aos="flip-right" class="project-box" *ngIf="allProjects || jsProjects">
-                <img class="project-cover" src="../../assets/img/portfolio_screenshots/screen_pollo_loco.png" alt="">
+                <img class="project-cover" src="assets/img/portfolio_screenshots/screen_pollo_loco.png" alt="">
                 <div class="project-info">
                     <h1>El Pollo Loco</h1>
                     <p>This is a 2D Jump and Run Game based on object-oriented programming (OOP)</p>
@@ -27,7 +27,7 @@
             </div>
 
             <div data-aos="flip-right" class="project-box" *ngIf="allProjects || angularProjects">
-                <img class="project-cover" src="../../assets/img/portfolio_screenshots/screen_ring_of_fire.png" alt="">
+                <img class="project-cover" src="assets/img/portfolio_screenshots/screen_ring_of_fire.png" alt="">
                 <div class="project-info">
                     <h1>Ring of Fire</h1>
                     <p>This is an Angular based webapp of the popular drinking game</p>
@@ -39,7 +39,7 @@
             </div>
 
             <div data-aos="flip-right" class="project-box" *ngIf="allProjects || jsProjects" >
-                <img class="project-cover" src="../../assets/img/portfolio_screenshots/screen_kanban.png" alt="">
+                <img class="project-cover" src="assets/img/portfolio_screenshots/screen_kanban.png" alt="">
                 <div class="project-info">
                     <h1>Join - Kanban Board</h1>
                     <p>This is a Kanban Board for project and personal management. </p>
@@ -51,7 +51,7 @@
             </div>
 
             <div data-aos="flip-right" class="project-box" *ngIf="allProjects || jsProjects">
-                <img class="project-cover" src="../../assets/img/portfolio_screenshots/screen_pokedex.png" alt="">
+                <img class="project-cover" src="assets/img/portfolio_screenshots/screen_pokedex.png" alt="">
                 <div class="project-info">
                     <h1>Pokedex</h1>
                     <p>This is a collection of Pokemon and their skills based on the Pokedex-API</p>
