--- a/src/app/contact-section/contact-section.component.html
+++ b/src/app/contact-section/contact-section.component.html
@@ -6,22 +6,24 @@
     </div>
 
     <div class="form-container">
-        <form action="">
-            <label for="fname">Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Enter your name">
+        <form action="http://kevin-wagner.developerakademie.net/send_mail.php" method="post">
+            <label for="name">Name</label>
+            <input type="text" id="fname" name="name" placeholder="Enter your name">
 
             <label for="email">Email address</label>
             <input type="email" id="email" name="email" placeholder="Enter your name">
 
-            <label for="textarea">Message</label>
-            <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Enter Your Message"></textarea>
+            <label for="message">Message</label>
+            <textarea name="message" id="textarea" cols="30" rows="10" placeholder="Enter Your Message"></textarea>
+
+            <div data-aos="zoom-in-right" class="button-container">
+                <button type="submit">
+                    <p>Send</p>
+                </button>
+            </div>
         </form>
 
-        <div data-aos="zoom-in-right" class="button-container">
-            <button type="submit">
-                <a href="#"><p>Send</p></a>
-            </button>
-        </div>
+
     </div>
 
 </div>
