--- a/src/app/skills-section/skills-section.component.html
+++ b/src/app/skills-section/skills-section.component.html
@@ -8,63 +8,63 @@
 
         <div data-aos="fade-right" class="skill-box">
             <div class="skill-icon-container">
-                <img src="../../assets/icons/Group 205.png" alt="">
+                <img src="assets/icons/Group 205.png" alt="">
             </div>
             <p>HTML / CSS</p>
         </div>
 
         <div data-aos="fade-right" class="skill-box">
             <div class="skill-icon-container">
-                <img src="../../assets/icons/java script.png" alt="">
+                <img src="assets/icons/java script.png" alt="">
             </div>
             <p>JavaScript</p>
         </div>
 
         <div data-aos="fade-right" class="skill-box">
             <div class="skill-icon-container">
-                <img src="../../assets/icons/angular.png" alt="">
+                <img src="assets/icons/angular.png" alt="">
             </div>
             <p>Angular</p>
         </div>
 
         <div data-aos="fade-right" class="skill-box">
             <div class="skill-icon-container">
-                <img src="../../assets/icons/icons8-rest-api-80 2.png" alt="">
+                <img src="assets/icons/icons8-rest-api-80 2.png" alt="">
             </div>
             <p>Rest API</p>
         </div>
 
         <div data-aos="fade-right" class="skill-box">
             <div class="skill-icon-container">
-                <img src="../../assets/icons/Git-Icon-1788C 2.png" alt="">
+                <img src="assets/icons/Git-Icon-1788C 2.png" alt="">
             </div>
             <p>Git</p>
         </div>
 
         <div data-aos="fade-right" class="skill-box">
             <div class="skill-icon-container">
-                <img src="../../assets/icons/Group 226.png" alt="">
+                <img src="assets/icons/Group 226.png" alt="">
             </div>
             <p>SCRUM</p>
         </div>
 
         <div data-aos="fade-right" class="skill-box">
             <div class="skill-icon-container">
-                <img src="../../assets/icons/Group 20.png" alt="">
+                <img src="assets/icons/Group 20.png" alt="">
             </div>
             <p>Design Thinking</p>
         </div>
 
         <div data-aos="fade-right" class="skill-box">
             <div class="skill-icon-container">
-                <img src="../../assets/icons/icons8-test-lab-96 2.png" alt="">
+                <img src="assets/icons/icons8-test-lab-96 2.png" alt="">
             </div>
             <p>Test automation</p>
         </div>
 
         <div data-aos="fade-right" class="skill-box">
             <div class="skill-icon-container">
-                <img src="../../assets/icons/icons8-database-52 2.png" alt="">
+                <img src="assets/icons/icons8-database-52 2.png" alt="">
             </div>
             <p>Databases</p>
         </div>
