--- a/src/app/contact-section/contact-section.component.html
+++ b/src/app/contact-section/contact-section.component.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="form-container">
-        <form action="http://kevin-wagner.developerakademie.net/send_mail.php" method="post">
+        <form action="https://kevin-wagner.developerakademie.net/send_mail.php" method="post">
             <label for="name">Name</label>
             <input type="text" id="fname" name="name" placeholder="Enter your name">
 
