changed button on home section

--- a/src/app/home-section/home-section.component.html
+++ b/src/app/home-section/home-section.component.html
@@ -5,10 +5,12 @@
             <div class="welcome-text">
                 <h1 data-aos="fade-right">Hi,<br> I'm <span class="red">Kevin</span> Wagner<br> Front End develop<span class="mint">e</span>r</h1>
             </div>
-            
-            <div data-aos="flip-up" class="button">
-                <a href="#contact-me-container"><p>Contact me</p></a>
-            </div>
+
+            <a href="#contact-me-container">
+                <div data-aos="flip-up" class="button">
+                    <p>Contact me</p>
+                </div>
+            </a>
         </div>
     
         <div class="profile-picture-container">
