--- a/src/app/home-section/home-section.component.scss
+++ b/src/app/home-section/home-section.component.scss
@@ -35,6 +35,7 @@
         width: 200px;
         height: 60px;
         margin-top: 60px;
+        color: whitesmoke;
         
         &:hover {
             background-color: #2DFCD8;
