changed mail link in contact section

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <header>
-    <a href="#home-section"><img class="header-logo" src="../../assets/img/logo_white.png" alt=""></a>
+    <a href="#home-section"><img class="header-logo" src="assets/img/logo_white.png" alt=""></a>
 
     <div>
         <a href="#home-section">Home</a>
@@ -10,7 +10,7 @@
 
 
     <div mat-button [matMenuTriggerFor]="menu" class="example-button-container">
-        <img mat-button mat-mini-fab color="" aria-label="Example icon button with a menu icon" [matMenuTriggerFor]="menu" class="burger-menu" src="../../assets/icons/menu_FILL0_wght400_GRAD0_opsz48.png" alt="">
+        <img mat-button mat-mini-fab color="" aria-label="Example icon button with a menu icon" [matMenuTriggerFor]="menu" class="burger-menu" src="assets/icons/menu_FILL0_wght400_GRAD0_opsz48.png" alt="">
     </div>
 
     <mat-menu class="mobile-menu" #menu="matMenu">
@@ -18,11 +18,6 @@
         <a href="#skills-section-container"><button mat-menu-item>Skills</button></a>
         <a href="#portfolio-section-container"><button mat-menu-item>Portfolio</button></a>
         <a routerLink="/imprint"><button mat-menu-item>Imprint</button></a>
-
-        <!-- <button mat-menu-item><a href="#home-section" style="color: black">Home</a></button>
-        <button mat-menu-item> <a href="#skills-section-container" style="color: black">Skills</a></button>
-        <button mat-menu-item> <a href="#portfolio-section-container" style="color: black">Portfolio</a></button>
-        <button mat-menu-item><a href="#footer-container" style="color: black">Imprint</a></button> -->
     </mat-menu>
 
     
