--- a/src/app/contact-section/contact-section.component.html
+++ b/src/app/contact-section/contact-section.component.html
@@ -2,19 +2,19 @@
 
     <div data-aos="zoom-in-left" class="headline-container">
         <h1>Contact me.</h1>
-        <p>get in touch via the form below, or by emailing <a href="#">kevin_wagner4493@web.de</a> </p>
+        <p>get in touch via the form below, or by emailing <a href="mailto:kevin_wagner4493@web.de">kevin_wagner4493@web.de</a> </p>
     </div>
 
     <div class="form-container">
         <form action="https://kevin-wagner.developerakademie.net/send_mail.php" method="post">
             <label for="name">Name</label>
-            <input type="text" id="fname" name="name" placeholder="Enter your name">
+            <input type="text" id="fname" name="name" placeholder="Enter your name" required>
 
             <label for="email">Email address</label>
-            <input type="email" id="email" name="email" placeholder="Enter your name">
+            <input type="email" id="email" name="email" placeholder="Enter your Email address" required>
 
             <label for="message">Message</label>
-            <textarea name="message" id="textarea" cols="30" rows="10" placeholder="Enter Your Message"></textarea>
+            <textarea name="message" id="textarea" cols="30" rows="10" placeholder="Enter Your Message" required></textarea>
 
             <div data-aos="zoom-in-right" class="button-container">
                 <button type="submit">
