--- a/src/app/portfolio-section/portfolio-section.component.html
+++ b/src/app/portfolio-section/portfolio-section.component.html
@@ -56,8 +56,8 @@
                     <h1>Pokedex</h1>
                     <p>This is a collection of Pokemon and their skills based on the Pokedex-API</p>
                     <div class="button-container">
-                        <button><a href="#">Try it out</a></button>
-                        <button><a href="#">Show me the Code</a></button>
+                        <button><a href="http://pokedex.kev-wagner.com/" target="_blank">Try it out</a></button>
+                        <button><a href="https://github.com/Kev4493/Pokedex" target="_blank">Show me the Code</a></button>
                     </div>
                 </div>
             </div>
