--- a/src/app/data-protection/data-protection.component.scss
+++ b/src/app/data-protection/data-protection.component.scss
@@ -2,7 +2,7 @@
     padding-left: 111.344px;
     padding-right: 111.344px;
     padding-top: 200px;
-    height: 100vh;
+    padding-bottom: 100px;
 }
 
 @media (max-width: 800px) {
