--- a/src/app/portfolio-section/portfolio-section.component.html
+++ b/src/app/portfolio-section/portfolio-section.component.html
@@ -32,8 +32,8 @@
                     <h1>Ring of Fire</h1>
                     <p>This is an Angular based webapp of the popular drinking game</p>
                     <div class="button-container">
-                        <button><a href="#">Try it out</a></button>
-                        <button><a href="#">Show me the Code</a></button>
+                        <button><a href="https://ring-of-fire.kev-wagner.com/" target="_blank">Try it out</a></button>
+                        <button><a href="https://github.com/Kev4493/Ring-of-Fire/tree/main/ringoffire" target="_blank">Show me the Code</a></button>
                     </div>
                 </div>
             </div>
@@ -44,8 +44,8 @@
                     <h1>Join - Kanban Board</h1>
                     <p>This is a Kanban Board for project and personal management. </p>
                     <div class="button-container">
-                        <button><a href="#">Try it out</a></button>
-                        <button><a href="#">Show me the Code</a></button>
+                        <button><a href="https://join.kev-wagner.com/" target="_blank">Try it out</a></button>
+                        <button><a href="git@github.com:MadMax8704/Kanban.git" target="_blank">Show me the Code</a></button>
                     </div>
                 </div>
             </div>
@@ -58,6 +58,18 @@
                     <div class="button-container">
                         <button><a href="http://pokedex.kev-wagner.com/" target="_blank">Try it out</a></button>
                         <button><a href="https://github.com/Kev4493/Pokedex" target="_blank">Show me the Code</a></button>
+                    </div>
+                </div>
+            </div>
+
+            <div data-aos="flip-right" class="project-box" *ngIf="allProjects || angularProjects">
+                <img class="project-cover" src="assets/img/portfolio_mac_screen_dark.jpg" alt="">
+                <div class="project-info">
+                    <h1>Portfolio</h1>
+                    <p>my personal homepage was created with angular</p>
+                    <div class="button-container">
+                        <button><a href="https://kev-wagner.com/" target="_blank">Try it out</a></button>
+                        <button><a href="https://github.com/Kev4493/Portfolio" target="_blank">Show me the Code</a></button>
                     </div>
                 </div>
             </div>
