--- a/src/app/about-me-section/about-me-section.component.html
+++ b/src/app/about-me-section/about-me-section.component.html
@@ -4,7 +4,7 @@
         <img src="assets/img/Profilbild.jpeg" alt="">
         <div class="about-me-text">
             <h1>About Me</h1>
-            <p>"I absolutely love building web applications and solving problems. I'm always open for opportunities in order to expand my horizon."</p>
+            <p>"I am a 29 year old frontend developer who loves to solve problems and take on new challenges."</p>
         </div>
     </div>
 
@@ -19,21 +19,12 @@
             <div class="text-container">
                 <p class="headline">My Journey began</p>
                 <p>
-                    as a productmanager in an industrial company.
-                    Early on, i got the chance to collaborate in multiple IT and digitalization projects.
-                </p>
-            </div>
-        </div>
-
-        <div data-aos="zoom-in" class="cv-boxes">
-            <div class="icon-container">
-                <img src="assets/icons/heart-line.png" alt="">
-            </div>
-            <div class="text-container">
-                <p class="headline">My Journey began</p>
-                <p>
-                    as a productmanager in an industrial company.
-                    Early on, i got the chance to collaborate in multiple IT and digitalization projects.
+                    already at a young age where I was the first point of contact for family and friends when
+                    it came to small software and hardware problems. <br>
+                    This passion remained until today..
+                    I spent my free time programming and taught myself the basics of HTML and CSS.
+                    Quickly I noticed that I enjoy this a lot and I would like to work professionally in this field in
+                    the future.
                 </p>
             </div>
         </div>
@@ -43,10 +34,28 @@
                 <img src="assets/icons/search-line.png" alt="">
             </div>
             <div class="text-container">
-                <p class="headline">My Journey began</p>
+                <p class="headline">I searched for Help</p>
                 <p>
-                    as a productmanager in an industrial company.
-                    Early on, i got the chance to collaborate in multiple IT and digitalization projects.
+                    At a certain point, I wanted to learn faster and more efficiently, so I decided to seek professional help.
+                    After a long search, I decided to join the Developer Academy in Munich in January 2022.
+                    Beside my main job I learned there in shortest time the fundamental knowledge for the frontend web development.
+                    I completed a lot of different projects there, both individually and in groups.
+                </p>
+            </div>
+        </div>
+
+        <div data-aos="zoom-in" class="cv-boxes">
+            <div class="icon-container">
+                <img src="assets/icons/heart-line.png" alt="">
+            </div>
+            <div class="text-container">
+                <p class="headline">My Passion</p>
+                <p>
+                    This deep insight into programming made me realize that I had made exactly the right decision.
+                    I love developing web applications and facing new challenges.
+                    I have found my passion!
+                    With every project I complete, with every new challenge I face, I always learn a little bit more and I never get bored.
+                    I invest a lot of time in coding and I love it!
                 </p>
             </div>
         </div>
@@ -56,14 +65,13 @@
                 <img src="assets/icons/flight-takeoff-line.png" alt="">
             </div>
             <div class="text-container">
-                <p class="headline">My Journey began</p>
+                <p class="headline">My Goals</p>
                 <p>
-                    as a productmanager in an industrial company.
-                    Early on, i got the chance to collaborate in multiple IT and digitalization projects.
+                    I would like to deepen my knowledge in the field of frontend development and am therefore looking for a chance to join an interesting team, to support this team and develop professionally as well as personally.
                 </p>
             </div>
         </div>
 
     </div>
-    
+
 </div>
