--- a/src/app/portfolio-section/portfolio-section.component.html
+++ b/src/app/portfolio-section/portfolio-section.component.html
@@ -20,8 +20,11 @@
                     <h1>El Pollo Loco</h1>
                     <p>This is a 2D Jump and Run Game based on object-oriented programming (OOP)</p>
                     <div class="button-container">
-                        <button><a href="#">Try it out</a></button>
-                        <button><a href="#">Show me the Code</a></button>
+                        <a href="https://www.pollo-loco.kev-wagner.com/" target="_blank"><button>Try it out</button></a>
+                        <a href="https://github.com/Kev4493/El_pollo_loco" target="_blank"><button>Show me the Code</button></a>
+                        
+                        <!-- <button><a href="https://www.pollo-loco.kev-wagner.com/" target="_blank">Try it out</a></button>
+                        <button><a href="https://github.com/Kev4493/El_pollo_loco" target="_blank">Show me the Code</a></button> -->
                     </div>
                 </div>
             </div>
@@ -66,7 +69,7 @@
                 <img class="project-cover" src="assets/img/portfolio_mac_screen_dark.jpg" alt="">
                 <div class="project-info">
                     <h1>Portfolio</h1>
-                    <p>my personal homepage was created with angular</p>
+                    <p>My personal homepage was created with angular</p>
                     <div class="button-container">
                         <button><a href="https://kev-wagner.com/" target="_blank">Try it out</a></button>
                         <button><a href="https://github.com/Kev4493/Portfolio" target="_blank">Show me the Code</a></button>
