--- a/src/app/portfolio-section/portfolio-section.component.scss
+++ b/src/app/portfolio-section/portfolio-section.component.scss
@@ -100,7 +100,8 @@
                     padding: 1rem;
                     background-color: white;
                     text-transform: uppercase;
-                    // cursor: pointer;
+                    cursor: pointer;
+                    color: #FA2759;
 
                     a {
                         text-decoration: none;
@@ -110,6 +111,7 @@
                     &:hover {
                         background-color: #FA2759;
                         transition: all 125ms ease-in-out;
+                        color: black;
 
                         a {
                             color: black;
