--- a/src/app/about-me-section/about-me-section.component.scss
+++ b/src/app/about-me-section/about-me-section.component.scss
@@ -58,7 +58,7 @@
 
         .cv-boxes {
             display: flex;
-            justify-content: center;
+            // justify-content: center;
             flex-direction: column;
             text-align: center;
             align-items: center;
@@ -100,21 +100,27 @@
     }
 }
 
-@media (max-width: 1195px) {
+@media (max-width: 1345px) {
 
     .cv-boxes {
         width: 185px !important;
     }
 }
 
-@media (max-width: 1090px) {
+// @media (max-width: 1100px) {
 
-    .cv-boxes {
-        width: 165px !important;
-    }
-}
+//     .about-me-body {
+//         flex-direction: column;
+//         align-items: center;
+//         margin-top: 0 !important;
+//     }
 
-@media (max-width: 950px) {
+//     .cv-boxes {
+//         width: 450px !important;
+//     }
+// }
+
+@media (max-width: 1100px) {
 
     .about-me-body {
         flex-direction: column;
