changed some links

--- a/src/app/portfolio-section/portfolio-section.component.html
+++ b/src/app/portfolio-section/portfolio-section.component.html
@@ -22,9 +22,6 @@
                     <div class="button-container">
                         <a href="https://www.pollo-loco.kev-wagner.com/" target="_blank"><button>Try it out</button></a>
                         <a href="https://github.com/Kev4493/El_pollo_loco" target="_blank"><button>Show me the Code</button></a>
-                        
-                        <!-- <button><a href="https://www.pollo-loco.kev-wagner.com/" target="_blank">Try it out</a></button>
-                        <button><a href="https://github.com/Kev4493/El_pollo_loco" target="_blank">Show me the Code</a></button> -->
                     </div>
                 </div>
             </div>
@@ -35,8 +32,8 @@
                     <h1>Ring of Fire</h1>
                     <p>This is an Angular based webapp of the popular drinking game</p>
                     <div class="button-container">
-                        <button><a href="https://ring-of-fire.kev-wagner.com/" target="_blank">Try it out</a></button>
-                        <button><a href="https://github.com/Kev4493/Ring-of-Fire/tree/main/ringoffire" target="_blank">Show me the Code</a></button>
+                        <a href="https://ring-of-fire.kev-wagner.com/" target="_blank"><button>Try it out</button></a>
+                        <a href="https://github.com/Kev4493/Ring-of-Fire/tree/main/ringoffire" target="_blank"><button>Show me the Code</button></a>
                     </div>
                 </div>
             </div>
@@ -47,8 +44,8 @@
                     <h1>Join - Kanban Board</h1>
                     <p>This is a Kanban Board for project and personal management. </p>
                     <div class="button-container">
-                        <button><a href="https://join.kev-wagner.com/" target="_blank">Try it out</a></button>
-                        <button><a href="git@github.com:MadMax8704/Kanban.git" target="_blank">Show me the Code</a></button>
+                        <a href="https://join.kev-wagner.com/" target="_blank"><button>Try it out</button></a>
+                        <a href="https://github.com/MadMax8704/Kanban.git" target="_blank"><button>Show me the Code</button></a>
                     </div>
                 </div>
             </div>
@@ -59,8 +56,8 @@
                     <h1>Pokedex</h1>
                     <p>This is a collection of Pokemon and their skills based on the Pokedex-API</p>
                     <div class="button-container">
-                        <button><a href="http://pokedex.kev-wagner.com/" target="_blank">Try it out</a></button>
-                        <button><a href="https://github.com/Kev4493/Pokedex" target="_blank">Show me the Code</a></button>
+                        <a href="http://pokedex.kev-wagner.com/" target="_blank"><button>Try it out</button></a>
+                        <a href="https://github.com/Kev4493/Pokedex" target="_blank"><button>Show me the Code</button></a>
                     </div>
                 </div>
             </div>
@@ -71,8 +68,8 @@
                     <h1>Portfolio</h1>
                     <p>My personal homepage was created with angular</p>
                     <div class="button-container">
-                        <button><a href="https://kev-wagner.com/" target="_blank">Try it out</a></button>
-                        <button><a href="https://github.com/Kev4493/Portfolio" target="_blank">Show me the Code</a></button>
+                        <a href="https://kev-wagner.com/" target="_blank"><button>Try it out</button></a>
+                        <a href="https://github.com/Kev4493/Portfolio" target="_blank"><button>Show me the Code</button></a>
                     </div>
                 </div>
             </div>
