redesign and bugfixing

--- a/src/app/about-me-section/about-me-section.component.html
+++ b/src/app/about-me-section/about-me-section.component.html
@@ -1,10 +1,10 @@
 <div class="about-me-container">
 
     <div class="about-me-header">
-        <img src="assets/img/Profilbild.jpeg" alt="">
+        <img src="assets/img/profilbild2.JPG" alt="">
         <div class="about-me-text">
             <h1>About Me</h1>
-            <p>"I am a 29 year old frontend developer who loves to solve problems and take on new challenges."</p>
+            <p>"I'm a 29-year-old front-end developer who loves solving problems and taking on new challenges."</p>
         </div>
     </div>
 
