--- a/src/app/contact-section/contact-section.component.html
+++ b/src/app/contact-section/contact-section.component.html
@@ -2,11 +2,12 @@
 
     <div data-aos="zoom-in-left" class="headline-container">
         <h1>Contact me.</h1>
-        <p>get in touch via the form below, or by emailing <a href="mailto:kevin_wagner4493@web.de">kevin_wagner4493@web.de</a> </p>
+        <p>get in touch via the form below, or by emailing <a href="mailto:info@kev-wagner.com">info@kev-wagner.com</a> </p>
     </div>
 
     <div class="form-container">
-        <form action="https://kevin-wagner.developerakademie.net/send_mail.php" method="post">
+        <form action="https://kev-wagner.com/send_mail.php"  method="post">
+            
             <label for="name">Name</label>
             <input type="text" id="fname" name="name" placeholder="Enter your name" required>
 
