--- a/src/app/skills-section/skills-section.component.html
+++ b/src/app/skills-section/skills-section.component.html
@@ -48,12 +48,12 @@
             <p>SCRUM</p>
         </div>
 
-        <div data-aos="fade-right" class="skill-box">
+        <!-- <div data-aos="fade-right" class="skill-box">
             <div class="skill-icon-container">
                 <img src="assets/icons/Group 20.png" alt="">
             </div>
             <p>Design Thinking</p>
-        </div>
+        </div> -->
 
         <div data-aos="fade-right" class="skill-box">
             <div class="skill-icon-container">
