--- a/src/app/footer-section/footer-section.component.html
+++ b/src/app/footer-section/footer-section.component.html
@@ -8,7 +8,7 @@
     <div class="social-media-container">
         <a href="https://www.linkedin.com/in/kevin-wagner-aa157a209/" target="_blank"><img src="assets/icons/linkedin-box-fill.png" alt=""></a>
         <a href="https://github.com/Kev4493" target="_blank"><img src="assets/icons/github-fill.png" alt=""></a>
-        <a href="https://www.xing.com/profile/Kevin_Wagner113/cv" target="_blank"><img src="assets/icons/xing-fill.png" alt=""></a>
+        <!-- <a href="https://www.xing.com/profile/Kevin_Wagner113/cv" target="_blank"><img src="assets/icons/xing-fill.png" alt=""></a> -->
     </div>
 
 </div>
