--- a/src/app/footer-section/footer-section.component.scss
+++ b/src/app/footer-section/footer-section.component.scss
@@ -5,7 +5,7 @@
     width: 95%;
     background-color: white;
     height: 80px;
-    padding: 0px 60px;
+    padding: 0 9.5%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -23,9 +23,9 @@
     }
 
     .social-media-container {
-        width: 300px;
+        width: 120px;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-between;
         img {
             width: 50px;
             height: 50px;
@@ -33,38 +33,40 @@
     }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 2560px) {
+    .footer-container {
+        height: 115px !important;
+    }
 
-    .social-media-container {
-        img {
-            width: 40px !important;
-            height: 40px !important;
+    .impressum-container {
+        a {
+            font-size: 1.6rem !important;
         }
     }
-}
 
-@media (max-width: 600px) {
-    .footer-container {
-        flex-direction: column-reverse;
-        justify-content: space-around;
+    .social-media-container {
+        width: 220px !important;
+        img {
+            width: 75px !important;
+            height: 75px !important;
+        }
     }
 }
 
 @media (max-width: 425px) {
     .footer-container {
-        height: 140px;
-        
-        a {
-            margin-bottom: 0.5rem;
-        }
+        flex-direction: column;
+        align-items: center;
+        height: 130px;
     }
-}
+    .impressum-container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly !important;
+        height: 100%;
 
-@media (max-width: 320px) {
-    .footer-container {
-        
         a {
-            font-size: 0.8rem;
+            margin: 0 !important;
         }
     }
 }
