--- a/src/app/home-section/home-section.component.html
+++ b/src/app/home-section/home-section.component.html
@@ -14,7 +14,7 @@
         </div>
     
         <div class="profile-picture-container">
-            <img data-aos="fade-left" class="profile-picture" src="assets/img/Profilbild.jpeg" alt="">
+            <img data-aos="fade-left" class="profile-picture" src="assets/img/profilbild.JPG" alt="">
         </div>
     </div>
 
