--- a/src/app/home-section/home-section.component.scss
+++ b/src/app/home-section/home-section.component.scss
@@ -1,6 +1,6 @@
 .home-section-container {
-    padding-left: 105px;
-    padding-right: 105px;
+    padding-left: 12%;
+    padding-right: 12%;
     height: 100vh;
 
     .home-section {
@@ -16,11 +16,11 @@
         h1 {
             font-size: 4rem;
             font-family: 'Exo 2';
-    
+
             .red {
                 color: #FA2759;
             }
-    
+
             .mint {
                 color: #2DFCD8;
             }
@@ -36,7 +36,7 @@
         height: 60px;
         margin-top: 60px;
         color: whitesmoke;
-        
+
         &:hover {
             background-color: #2DFCD8;
             cursor: pointer;
@@ -56,6 +56,7 @@
         width: 350px;
         height: 350px;
         object-fit: cover;
+        object-position: top;
         border-radius: 100%;
 
     }
@@ -73,19 +74,39 @@
             margin-bottom: 60px;
             cursor: pointer;
         }
-
     }
 }
 
-@media (max-width: 1195px) {
+// 4K / 2560px: 
+@media (min-width: 2560px) {
+    .welcome-text {
+        h1 {
+            font-size: 5rem !important;
+        }
+    }
 
-    h1 {
-        font-size: 3.5rem !important;
+    .profile-picture {
+        width: 500px !important;
+        height: 500px !important;
+    }
+
+    .button {
+        height: 85px !important;
+        width: 230px !important;
+        
+        p {
+            font-size: 1.5rem;
+        }
     }
 }
 
-
-@media (max-width: 1130px) {
+// Sonstige Größen / 1325px:
+@media (max-width: 1500px) {
+    .welcome-text {
+        h1 {
+            font-size: 3rem !important;
+        }
+    }
 
     .profile-picture {
         width: 300px !important;
@@ -93,49 +114,58 @@
     }
 }
 
-@media (max-width: 1090px) {
 
-    h1 {
-        font-size: 3.0rem !important;
+
+// Laptop / 1024px:
+@media(max-width: 1024px) {
+    .welcome-text {
+        h1 {
+            font-size: 2.5rem !important;
+        }
+    }
+
+    .profile-picture {
+        width: 250px !important;
+        height: 250px !important;
     }
 }
 
-@media (max-width: 1024px) {
-    .home-section-container {
-        padding-left: 80px;
-        padding-right: 80px;
+// Sonstige Größe / 880px:
+@media (max-width: 880px) {
+    .welcome-text {
+        h1 {
+            font-size: 2rem !important;
+        }
+    }
+
+    .profile-picture {
+        width: 250px !important;
+        height: 250px !important;
     }
 }
 
-@media (max-width: 950px) {
-
-    .home-section-container {
-        padding-top: 100px;
-    }
-
+// Tablet / 768px:
+@media (max-width: 768px) {
     .home-section {
         flex-direction: column-reverse;
-        justify-content: flex-end !important;
+        justify-content: center !important;
 
         div {
             display: flex;
-            justify-content: center;
             flex-direction: column;
             align-items: center;
+        }
 
+        .welcome-text {
             h1 {
-                margin-top: 3rem;
-            }
-
-            .button {
-                margin-top: 5rem;
-                width: 350px;
+                margin-top: 60px;
             }
         }
     }
 
     .profile-picture {
-        margin-top: 4rem;
+        width: 380px;
+        height: 380px;
     }
 
     .down-icon-container {
@@ -143,72 +173,55 @@
     }
 }
 
-@media (max-width:768px) {
-    .home-section-container {
-        padding-left: 50px;
-        padding-right: 50px;
-    }
-}
+// Mobile M / 425px:
+@media (max-width: 425px) {
+    .home-section {
+        flex-direction: column-reverse;
+        justify-content: center !important;
 
-@media (max-width: 600px) {
-    .home-section-container {
-        padding-left: 25px;
-        padding-right: 25px;
-    }
-
-    .welcome-text {
-        h1 {
-            font-size: 2rem !important;
-            margin-top: 5rem !important;
-        }
-    }
-
-    .button {
-        width: 250px !important;
-    }
-
-    .profile-picture {
-        width: 250px !important;
-        height: 250px !important;
-        margin-top: 5rem;
-    }
-}
-
-
-@media (max-width: 360px) {
-
-    .home-section-container {
-        padding-left: 40px;
-        padding-right: 40px;
-        padding-top: 135px;
-
-        .home-section {
-            flex-direction: column-reverse;
-            justify-content: flex-end;
-        }
-
-        h1 {
-            font-size: 2rem !important;
+        .welcome-text {
+            h1 {
+                font-size: 2rem !important;
+                margin-top: 60px !important;
+            }
         }
 
         .profile-picture {
             width: 200px;
             height: 200px;
+            margin-top: 2rem;
+        }
+    }
+    .down-icon-container {
+        display: none !important;
+    }
+}
+
+// Sonstige Größe / 400px:
+@media (max-width: 400px) {
+    .home-section {
+
+        .welcome-text {
+            h1 {
+                font-size: 1.8rem !important;
+            }
         }
     }
 }
 
+// Mobile M / 375px: 
 @media (max-width: 375px) {
+    .home-section {
 
-    .profile-picture {
-        width: 200px !important;
-        height: 200px !important;
-        margin-top: 2rem;
-    }
+        .welcome-text {
+            h1 {
+                font-size: 1.5rem !important;
+            }
+        }
 
-    .welcome-text {
-        h1 {
-            margin-top: 2rem !important;
+        .profile-picture {
+            width: 180px !important;
+            height: 180px !important;
         }
     }
 }
