--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -1,34 +1,32 @@
 .imprint-container {
-    padding-left: 111.344px;
-    padding-right: 111.344px;
-    padding-top: 200px;
+padding: 200px 12%;
     height: 100vh;
 }
 
-@media (max-width: 800px) {
+@media (min-width: 2560px) {
     .imprint-container {
-        padding-left: 85.125px;
-        padding-right: 85.125px;
-    };
+        padding: 250px 12%;
+
+        h1 {
+            font-size: 3rem;
+        }
+
+        h2 {
+            font-size: 2.5;
+        }
+
+        h3 {
+            font-size: 2rem;
+        }
+        
+        p {
+            font-size: 1.5rem;
+        }
+    }
 }
 
-@media (max-width: 950px) {
+@media(max-width: 425px) {
     .imprint-container {
-        padding-left: 93.344px;
-        padding-right: 93.344px;
-    };
-}
-
-@media (max-width: 600px) {
-    .imprint-container {
-        padding-left: 39.344px;
-        padding-right: 39.344px;
-    };
-}
-
-@media (max-width: 414px) {
-    .imprint-container {
-        padding-left: 49.969px;
-        padding-right: 49.969px;
-    };
+        padding: 150px 12%;
+    }
 }
