--- a/src/app/portfolio-section/portfolio-section.component.scss
+++ b/src/app/portfolio-section/portfolio-section.component.scss
@@ -1,7 +1,7 @@
 .portfolio-section-container {
-    max-width: 100vw;
-    min-height: 100vh;
-    padding: 60px 105px;
+    // max-width: 100vw;
+    // min-height: 100vh;
+    padding: 60px 12%;
 
     .header-container {
         display: flex;
@@ -36,188 +36,251 @@
         }
     }
 
-    .projects-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-wrap: wrap;
 
-        .projects-boxes-container {
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-            width: 80%;
-        }
-
-        .project-box {
-            width: 450px;
-            height: 300px;
-            margin: 1rem;
-            border-radius: 6px;
-            position: relative;
-
-            .project-cover {
-                object-fit: cover;
-                width: 450px;
-                border-radius: 6px;
-                overflow: hidden;
-            }
-
-            &:hover {
-                box-shadow: 5px 5px 18px -5px rgba(250, 39, 89, 0.7);
-                transition: 125ms;
-                // cursor: pointer;
-            }
-
-            .project-info {
-                color: black;
-                width: 100%;
-                height: 100%;
-                position: absolute;
-                top: 0;
-                left: 0;
-                opacity: 0;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                flex-direction: column;
-                padding: 3rem 2rem;
-
-                h1 {
-                    font-family: "Exo 2";
-                    text-transform: uppercase;
-                }
-
-                p {
-                    margin-top: 1rem;
-                    text-align: center;
-                }
-
-                button {
-                    border: 2px solid #FA2759;
-                    margin-left: 1rem;
-                    margin-right: 1rem;
-                    padding: 1rem;
-                    background-color: white;
-                    text-transform: uppercase;
-                    cursor: pointer;
-                    color: #FA2759;
-
-                    a {
-                        text-decoration: none;
-                        color: #FA2759;
-                    }
-
-                    &:hover {
-                        background-color: #FA2759;
-                        transition: all 125ms ease-in-out;
-                        color: black;
-
-                        a {
-                            color: black;
-                        }
-                    }
-                }
-
-                &:hover {
-                    opacity: 1;
-                    background-color: rgba(255, 255, 255, 0.7);
-                    transition: all 125ms ease-in-out;
-                }
-            }
-        }
-    }
-}
-
-@media (max-width: 1195px) {
 
     .projects-boxes-container {
-        width: 100% !important;
-    }
-}
-
-@media (max-width:768px) {
-
-    .portfolio-section-container {
-        padding: 60px 50px;
-    }
-}
-
-@media (max-width: 600px) {
-    .portfolio-section-container {
-        padding: 60px 25px;
-    }
-
-    .project-box {
-        width: 350px !important;
-        height: unset !important;
-
-        img {
-            width: 350px !important;
-        }
-
-        .project-info {
-            padding: 1rem !important;
-
-            h1 {
-                font-size: 1.5rem;
-            }
-
-            .button-container {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-direction: column;
-
-                button {
-                    padding: 0.3rem !important;
-                    margin-top: 1rem;
-                }
-            }
-        }
-
-    }
-}
-
-@media (max-width: 500px) {
-
-    .project-filter {
-        margin: 40px 10px !important;
-    }
-
-}
-
-@media (max-width: 375px) {
-
-    .project-filter-container {
         display: flex;
-        justify-content: space-between !important;
-        margin-top: 45px;
-        margin-bottom: 45px;
+        flex-direction: column;
 
-        .project-filter {
-            width: 90px !important;
-            margin: unset !important;
+        .row1 {
+            display: flex;
+            justify-content: space-around;
+        }
+
+        .row2 {
+            display: flex;
+            justify-content: space-around;
         }
     }
 
     .project-box {
-        width: 310px !important;
+        margin: 2rem 0rem;
+        position: relative;
 
         .project-cover {
-            width: 310px !important;
+            object-fit: cover;
+            width: 450px;
+            border-radius: 6px;
+            overflow: hidden;
         }
 
         .project-info {
+            color: black;
+            width: 420px;
+            height: 250px;
+            position: absolute;
+            top: 14px;
+            left: 16px;
+            opacity: 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-direction: column;
+            padding: 2rem 2rem;
+            border-radius: 5px;
+
             h1 {
-                font-size: 1rem;
+                font-family: "Exo 2";
+                text-transform: uppercase;
             }
 
             p {
-                font-size: 0.8rem;
+                margin-top: 1rem;
+                text-align: center;
+            }
+
+            button {
+                border: 2px solid #FA2759;
+                margin-left: 1rem;
+                margin-right: 1rem;
+                padding: 1rem;
+                background-color: white;
+                text-transform: uppercase;
+                cursor: pointer;
+                color: #FA2759;
+
+                a {
+                    text-decoration: none;
+                    color: #FA2759;
+                }
+
+                &:hover {
+                    background-color: #FA2759;
+                    transition: all 125ms ease-in-out;
+                    color: black;
+
+                    a {
+                        color: black;
+                    }
+                }
+            }
+
+            &:hover {
+                opacity: 1;
+                background-color: rgba(255, 255, 255, 1.0);
+                transition: all 125ms ease-in-out;
             }
         }
     }
+}
+
+// 4K / 2560px:
+@media (min-width: 2560px) {
+    .header-container {
+        h1 {
+            font-size: 2.5rem;
+        }
+    }
+
+    .project-filter {
+        font-size: 1.5rem;
+        width: 200px !important;
+        height: 115px !important;
+    }
+
+    .project-cover {
+        width: 600px !important;
+    }
+
+    .project-info {
+        top: 20px !important;
+        width: 565px !important;
+        height: 335px !important;
+    }
+}
+
+// Sonstige Größe / 1225px:
+@media (max-width: 1225px) {
+    .projects-boxes-container {
+        .row1 {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .row2 {
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+}
+
+// Laptop / 1024px 
+@media (max-width: 1024px) {
+    .projects-boxes-container {
+        .row1 {
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .row2 {
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+}
+
+// Sonstige Größe / 550px:
+@media (max-width: 550px) {
+    .header-container {
+        margin-bottom: 1rem;
+    }
+
+    .project-filter-container {
+        flex-direction: column;
+        
+        .project-filter {
+            height: 45px !important;
+            margin: .5rem 0 !important;
+        }
+    }
+}
+
+// Sonstige Größe / 500px:
+@media (max-width: 500px) {
+    .project-cover {
+        width: 250px !important;
+    }
+
+    .project-info {
+        top: 0px !important;
+        left: 0px !important;
+        height: 207px !important;
+        width: 250px !important;
+        padding: 0.5rem !important;
+        justify-content: space-between !important;
 
 
+        h1 {
+            font-size: 1rem !important;
+        }
+
+        p {
+            font-size: 1rem !important;
+            margin-top: 0 !important;
+        }
+
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            button {
+                font-size: .7rem;
+                padding: 0.5rem !important;
+                margin: .25rem;
+            }
+        }
+    }
+}
+
+// Mobile L / 425px: 
+@media (max-width: 425px) {
+    .header-container {
+        margin-bottom: 1rem;
+    }
+
+    .project-filter-container {
+        flex-direction: column;
+        
+        .project-filter {
+            height: 45px !important;
+            margin: .5rem 0 !important;
+        }
+    }
+
+    .project-cover {
+        width: 250px !important;
+    }
+
+    .project-info {
+        top: 0px !important;
+        left: 0px !important;
+        height: 207px !important;
+        width: 250px !important;
+        padding: 0.5rem !important;
+        justify-content: space-between !important;
+
+
+        h1 {
+            font-size: 1rem !important;
+        }
+
+        p {
+            font-size: 1rem !important;
+            margin-top: 0 !important;
+        }
+
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            button {
+                font-size: .7rem;
+                padding: 0.5rem !important;
+                margin: .25rem;
+            }
+        }
+
+    }
 }
