added new join project

--- a/src/app/portfolio-section/portfolio-section.component.html
+++ b/src/app/portfolio-section/portfolio-section.component.html
@@ -28,13 +28,13 @@
             </div>
 
             <div data-aos="flip-right" class="project-box" *ngIf="allProjects || jsProjects">
-                <img class="project-cover" src="assets/img/portfolio_screenshots/join.png" alt="">
+                <img class="project-cover" src="assets/img/portfolio_screenshots/join_new.png" alt="">
                 <div class="project-info">
                     <h1>Join - Kanban Board</h1>
                     <p>This is a Kanban Board for project and personal management. </p>
                     <div class="button-container">
-                        <a href="https://join.kev-wagner.com/" target="_blank"><button>Try it out</button></a>
-                        <a href="https://github.com/MadMax8704/Kanban.git" target="_blank"><button>Show me the
+                        <a href="https://join.kev-wagner.com/Join-Javascript" target="_blank"><button>Try it out</button></a>
+                        <a href="https://github.com/Kev4493/Join-Kanbanboard" target="_blank"><button>Show me the
                                 Code</button></a>
                     </div>
                 </div>
