add new project

--- a/src/app/dialog-mail-checkout/dialog-mail-checkout.component.html
+++ b/src/app/dialog-mail-checkout/dialog-mail-checkout.component.html
@@ -1,7 +1,7 @@
 <div class="checkout-container">
     
     <div class="checkout-text-container">
-        <h1><span class="red">Vielen Dank</span><br> für Ihre Nachricht !<br><br> Ich werde mich schnellstmöglich <br> mit Ihnen in Verbindung setz<span class="mint">e</span>n.</h1>
+        <h1><span class="red">Thank you</span><br> for your message !<br><br> I will contact you <br> as soon as possib<span class="mint">l</span>e.</h1>
     </div>
 
     <a href="#home-section">
