--- a/src/app/portfolio-section/portfolio-section.component.html
+++ b/src/app/portfolio-section/portfolio-section.component.html
@@ -44,13 +44,13 @@
 
         <div class="row2">
             <div data-aos="flip-right" class="project-box" *ngIf="allProjects || angularProjects">
-                <img class="project-cover" src="assets/img/portfolio_screenshots/ring_of_fire.png" alt="">
+                <img class="project-cover" src="assets/img/portfolio_screenshots/slack-clone.png" alt="">
                 <div class="project-info">
-                    <h1>Ring of Fire</h1>
-                    <p>This is an Angular based webapp of the popular drinking game</p>
+                    <h1>Slack Clone</h1>
+                    <p>This is a messaging app based on Google's Firebase Database </p>
                     <div class="button-container">
-                        <a href="https://ring-of-fire.kev-wagner.com/" target="_blank"><button>Try it out</button></a>
-                        <a href="https://github.com/Kev4493/Ring-of-Fire/tree/main/ringoffire"
+                        <a href="https://slack-clone.kev-wagner.com/" target="_blank"><button>Try it out</button></a>
+                        <a href="https://github.com/Kev4493/Slack_Clone"
                             target="_blank"><button>Show me the Code</button></a>
                     </div>
                 </div>
