--- a/src/app/skills-section/skills-section.component.html
+++ b/src/app/skills-section/skills-section.component.html
@@ -8,14 +8,21 @@
 
         <div data-aos="fade-right" class="skill-box">
             <div class="skill-icon-container">
-                <img src="assets/icons/Group 205.png" alt="">
+                <img src="assets/icons/java script.png" alt="">
             </div>
-            <p>HTML / CSS</p>
+            <p>HTML</p>
         </div>
 
         <div data-aos="fade-right" class="skill-box">
             <div class="skill-icon-container">
-                <img src="assets/icons/java script.png" alt="">
+                <img src="assets/icons/Group 205.png" alt="">
+            </div>
+            <p>CSS / SCSS</p>
+        </div>
+
+        <div data-aos="fade-right" class="skill-box">
+            <div class="skill-icon-container">
+                <img src="assets/icons/JavaScript_logo_PNG1.png" alt="">
             </div>
             <p>JavaScript</p>
         </div>
@@ -57,16 +64,16 @@
 
         <div data-aos="fade-right" class="skill-box">
             <div class="skill-icon-container">
-                <img src="assets/icons/icons8-test-lab-96 2.png" alt="">
+                <img src="assets/icons/material_design.png" alt="">
             </div>
-            <p>Test automation</p>
+            <p>Material Design</p>
         </div>
 
         <div data-aos="fade-right" class="skill-box">
             <div class="skill-icon-container">
-                <img src="assets/icons/icons8-database-52 2.png" alt="">
+                <img src="assets/icons/firebase.png" alt="">
             </div>
-            <p>Databases</p>
+            <p>Google Firebase</p>
         </div>
     </div>
 
